@@ -2,6 +2,7 @@
 
 from pytype import file_utils
 from pytype.tests import test_base
+from pytype.tests import test_utils
 
 
 class VariableAnnotationsBasicTest(test_base.TargetPython3BasicTest):
@@ -35,6 +36,7 @@ class VariableAnnotationsBasicTest(test_base.TargetPython3BasicTest):
 class VariableAnnotationsFeatureTest(test_base.TargetPython3FeatureTest):
   """Tests for PEP526 variable annotations."""
 
+  @test_utils.skipIn37("https://github.com/google/pytype/issues/216")
   def testInferTypes(self):
     ty = self.Infer("""\
       from typing import List
@@ -61,6 +63,7 @@ class VariableAnnotationsFeatureTest(test_base.TargetPython3FeatureTest):
           b: int
     """)
 
+  @test_utils.skipIn37("https://github.com/google/pytype/issues/216")
   def testIllegalAnnotations(self):
     _, errors = self.InferWithErrors("""\
       from typing import List, TypeVar, NoReturn
